# python

./: .gitignore  README.md  app.ipynb  db.py  main.py  model.py  pyproject.toml  requirements.txt  requirements_versions.txt  schema.py  seed.py
html/: licenses.html
modules/: cmd_args.py  launch_utils.py  processing.py  sd_hijack_optimizations.py  sd_models.py  sd_samplers.py  sd_samplers_kdiffusion.py  shared.py  shared_cmd_options.py  shared_init.py  shared_items.py  shared_options.py  shared_state.py  ui.py  ui_extra_networks_textual_inversion.py
modules/textual_inversion/: textual_inversion.py
